<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hemant.popularmovies.MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_details_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorTransparentGrey"
            android:contentDescription="@string/content_description_movie_poster"
            android:scaleType="fitXY" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMaterialGreen"
            android:padding="@dimen/dp5"
            android:text="@string/ReleaseDate"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_details_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMaterialGreen"
            android:padding="@dimen/dp5"
            android:text="@string/Ratings"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_details_ratings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMaterialGreen"
            android:padding="@dimen/dp5"
            android:text="@string/synopsis"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_details_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>
</ScrollView>